<resources>
    <string name="app_name">Janani</string>
    <string name="who_are_you">Who are you</string>
    <string name="title_activity_pregnant_lady_home">PregnantLadyHome</string>
    <string name="menu_personal_details">Personal Details</string>
    <string name="menu_risk_assessment">Risk Assessment</string>
    <string name="menu_todolist">ToDo List</string>
    <string name="menu_danger">Danger</string>
    <string name="menu_must_know">Must Know</string>
    <string name="menu_baby">Baby</string>
    <string name="menu_helpline">HelpLine</string>
    <string name="menu_calender">Calender</string>
    <string name="menu_video">Videos</string>
    <string name="click_on_threelined_button">Cats here</string>
    <string name="enter_your_name_which_was_entered_while_registering">Enter your Name(Entered while Registering)</string>
    <string name="radio_anm">ANM</string>
    <string name="title_activity_pl">Janani</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Maternity App</string>
    <string name="nav_header_subtitle">janani@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="click_here">Click Here</string>
    <string name="if_you_find_any_one_of_these_symptoms_call_to_the_number_below">If you find any one of these symptoms call to the number below!</string>
    <string name="title_activity_ra">Risk Assessment</string>
    <string name="title_activity_baby">Baby</string>
    <string name="registered_with_health_center">Registered with health center?</string>
    <string name="visited_your_doctor">Visited your doctor?</string>
    <string name="monthly_visit_to_anm">Monthly visit to ANM</string>
    <string name="took_your_folic_acid_tablets">Took your Folic Acid Tablets?</string>
    <string name="call_any_of_two_numbers_if_you_have_any_problem">Call any of two numbers if you have any problem!</string>
    <string name="user_login">User Login</string>
    <string name="login">Login!</string>
    <string name="not_have_an_account_signup_here">Not have an account? Signup Here</string>
    <string name="_1_is_there_any_bleeding">1.Is there any bleeding?</string>
    <string name="_2_are_you_a_sickle_cell_patient">2.Are you a sickle cell patient?</string>
    <string name="_3_did_you_give_birth_to_a_dead_baby_previously_or_any_abortion">3.Did you give birth to a dead baby previously or any abortion?</string>
    <string name="_4_was_your_previous_delivery_done_by_c_section">4.Was your previous delivery done by C-section?</string>
    <string name="_5_have_you_taken_treatment_for_infertility">5.Have you taken treatment for infertility?</string>
    <string name="_6_is_there_any_history_3_more_abortion">6.Is there any history 3/more abortion?</string>
    <string name="_4th_month">4th Month</string>
    <string name="t_t_dose">T.T dose</string>
    <string name="_5th_month">5th Month</string>
    <string name="took_your_iron_tablets">Took your Iron Tablets?</string>
    <string name="_2nd_t_t_dose">2nd T.T dose</string>
    <string name="_6th_month">6th Month</string>
    <string name="take_your_iron_tablets">Take your Iron Tablets</string>
    <string name="user_registration">User Registration</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Signup</string>
    <string name="already_registered_signin_here">Already Registered? Signin Here</string>
    <string name="_7th_month">7th Month</string>
    <string name="_8th_month">8th Month</string>
    <string name="anm_visit">ANM Visit</string>
    <string name="_9th_month">9th Month</string>
    <string name="visit_your_doctor">Visit your doctor</string>
    <string name="_2_days_before_edd_get_admitted">2 Days before EDD get admitted</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="_3rd_trimester">3rd Trimester</string>
    <string name="_1st_trimester">1st Trimester</string>
    <string name="_2nd_trimester">2nd Trimester</string>
    <string name="risk_assessment">Risk Assessment</string>
    <string name="todo_list">ToDo List</string>
    <string name="danger">Danger</string>
    <string name="must_know">Must Know</string>
    <string name="baby">Baby</string>
    <string name="helpline">HelpLine</string>
    <string name="calendar">Calendar</string>
    <string name="immunisation">Immunisation</string>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="teacher">Teachers\' Professional Day</string>
    <string name="personal_details">Personal Details</string>
    <string name="baby_information">Baby Information</string>
    <string name="enter_baby_name">Enter Baby Name</string>
    <string name="enter_baby_weight">Enter baby weight</string>
    <string name="enter_baby_age">Enter Baby Age</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="password">password</string>
    <string name="name_of_the_couple">Name of the couple</string>
    <string name="family_planning">Family Planning</string>
    <string name="no_of_children">No. of children</string>
    <string name="_3_n_n4_n_n3">3  4  3</string>
    <string name="next_counselling_date">Next Counselling Date:</string>
    <string name="check">Check</string>
    <string name="janani_app">Janani App</string>
    <string name="vaccination">Vaccination</string>
    <string name="post_natal">Post natal</string>
    <string name="low_risk">Low Risk</string>
    <string name="high_risk">High Risk</string>
    <string name="communicate">Pregnant women</string>
    <string name="enter_baby_date_of_birth">Enter Baby Date of Birth</string>
    <string name="pregnant_lady">Pregnant Lady</string>
    <string name="asha_aww">Asha/AWW</string>
    <string name="anm">ANM</string>
    <string name="doctor">Doctor</string>
    <string name="dpt_2">DPT-2</string>
    <string name="hepatitis_b_2">Hepatitis B-2</string>
    <string name="opv_2">OPV-2</string>
    <string name="_2_1_2_months">2 ½ months</string>
    <string name="hepatitis_b_1">Hepatitis B-1</string>
    <string name="dpt_1">DPT-1</string>
    <string name="opv_1">OPV-1</string>
    <string name="hepatitis_b_0">Hepatitis B-0</string>
    <string name="opv_0">OPV-0</string>
    <string name="b_c_g">B.C.G</string>
    <string name="_1_1_2_months">1 ½ months:</string>
    <string name="birth">Birth:</string>
    <string name="choose_file">Choose file</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="upload">Upload</string>
    <string name="show_uploads">Show Uploads</string>
    <string name="may_i_ask_your_phone_number">May I ask your phone number?</string>
    <string name="enter_your_mobile_number">enter your mobile number</string>
    <string name="cont">Continue</string>
    <string name="enter_your_husband_name">Enter your Husband Name</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="enter_your_last_menstral_period">Enter your Last Menstral Period</string>
    <string name="enter_the_number_of_children">Enter the Number of children</string>
    <string name="logout">Logout</string>
    <string name="wait_for_the_code_we_sent_you">Wait for the code we sent You</string>
    <string name="enter_verification_code">enter verification code</string>
    <string name="sign_in">Sign In</string>
    <string name="lang">Select Language</string>
    <string name="Photo">Photo</string>
    <string name="_1_mr_and_mrs_sharma_n_n_2_mr_and_mrs_sehgal_n_n_3_mr_and_mrs_rathod">1. Mr and Mrs Sharma    2. Mr and Mrs Sehgal   3. Mr and Mrs Rathod</string>
    <string name="title_activity_catalogue">Catalogue</string>
    <string name="large_text">

        "    PHC Mopar                    02652 236322\n\n"
        "         SHC Rajadhor            02521 235232\n"
        "              ASHA Padmadevi     9458526253\n"
        "              ASHA Savitri       8568659658\n"
        "              ASHA Vijayalaxmi   8456965456\n"
        "         SHC Tonatar             02352 326326\n"
        "              ASHA Manasi        9658695683\n"
        "              ASHA Niroopa       8653935698\n\n"
        "    PHC Nipania                  02525 226688\n\n"
        "         SHC Kadar               03654 289895\n"
        "              ASHA Fathima       9568235632\n"
        "              ASHA Megha         8523698562\n"
        "         SHC Kodwa               02363 326325\n"
        "              ASHA Revati        9563285632\n"
        "              ASHA Geeta         8236532568\n\n"
        "    PHC Mopka                    02525 226688\n\n"
        "         SHC Akaltara            03654 289895\n"
        "              ASHA Chandrika     9568235632\n"
        "              ASHA Parimala        8523698562\n"
        "         SHC Bijradih            02363 326325\n"
        "              ASHA Hansika       9563285632\n"
        "              ASHA Madhuri       8236532568\n"

    </string>
    <string name="immuni">" Birth:"
    "\n\n       BCG\n"
    "       OPV-0\n"
    "       Hepatitis B-0\n"
    "\n1 1/2 months\n\n"
    "       OPV-1\n"
    "       DPT-1\n"
    "       Hepatitis B-1\n"
    "\n2 1/2 months\n\n"
    "       OPV-2\n"
    "       DPT-2\n"
    "       Hepatitis B-2\n"
    "\n3 1/2 months\n\n"
    "       OPV-3\n"
    "       DPT-3\n"
    "       Hepatitis b-3\n"
    "\n 9 months\n\n"
    "       Measles\n"
    "       Vitamin A\n"
    "\n16 months\n\n"
    "       Vitamin A\n"
    "       DPT Booster\n"
    "\n24 months\n\n"
    "       Vitamin A\n"
    "       Polio Booster\n"
    "\n30 and 36 months\n"
    "\n       Vitamin A"</string>
    <string name="immunisation_details">Immunisation Details:</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="chc_bhatapara_03256_235623">CHC Bhatapara 03256 235623\n</string>
    <string name="lerge">lerge</string>
    <string name="title_activity_doc__nav">Doc_NavActivity</string>
    <string name="referred_cases">Referred cases</string>
    <string name="catalogue">Catalogue</string>
</resources>