<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_c"
            android:icon="@drawable/ic_child_care_black_24dp"
            android:title="@string/baby_information" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_local_pharmacy_black_24dp"
            android:title="@string/immunisation" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/must_know" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_error_black_24dp"
            android:title="@string/danger" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/helpline" />
        <item
            android:id="@+id/nav_ma"
            android:icon="@drawable/ic_filter_frames_black_24dp"
            android:title="@string/calendar" />
    </group>

</menu>
